# ytbot

cli/: README.md  poetry.toml  pyproject.toml
cli/cli/: app.py  llama3.py  stable_diffusion.py  tts.py
services/scraper/: reddit-scraper.py  requirements.txt
services/ytapi/: main.py  requirements.txt
